--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node src/index.js",
     "test": "node test/test.js",
     "demo": "node examples/demo.js",
+    "demo:auth": "node examples/auth-demo.js",
     "lint": "eslint src/",
     "format": "prettier --write src/ test/"
   },
